# C2

./: C2  C2.c  CMakeLists.txt  SMC.c  create_files.bash  dminawe  encrypt_key  encrypt_key.c  encrypt_password  encrypt_password.c  encrypt_payload  encrypt_payload.c  file_gen.h  generate_files.c  makefile
C2.rep/: project.prp  projectState
sMSvFebXhyfIUuEt/: (null)  1234567890.cfg  GARBAGEFILE.NOPE  NOPE.NOT  README.md  _____  a$$-data  auth_tokens.db  b4h6k3t8.tmp  blahblahblah.doc  config.yml  config_backup.ini  data_export.csv  db_backup.sql  db_backup_2023.sql  design_doc.md  firewall_rules.cfg  flufffile.bak  j5k9x.faux  junkfile.xyz  network_settings.conf  notes.docx  passwords.txt  passwords_bak.txt  private_key.pem  random_numbers.txt  sdf1234.tmp  secrets.env  session_data.tmp  sys_info_report.xml  system_logs.txt  temp_credentials.txt  test123.bak  token.key  uNkn0wnKey.txt  update.sh  user_data.json  user_profiles.json  v__randomfile.cfg  xoxooxo.py  (+1 more)
